# gui-envire_visualizer

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  EnvireVisualizer.cpp  EnvireVisualizer.h  EnvireVisualizerExceptions.h  EnvireVizPlugin.h  Main.cpp
